git commit -m "Remover pnpm-lock.yaml desatualizado"

--- a/package.json
+++ b/package.json
@@ -4,13 +4,31 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch server/_core/index.ts",
     "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "build:frontend": "vite build",
+    "build:backend": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
-    "db:push": "drizzle-kit generate && drizzle-kit migrate"
+    "db:push": "drizzle-kit push",
+    "db:migrate": "npm run db:push",
+    "env:local": "node scripts/setup-env.js local",
+    "env:production": "node scripts/setup-env.js production",
+    "env:static": "node scripts/setup-env.js static",
+    "env:local:win": "powershell -ExecutionPolicy Bypass -File scripts/setup-env.ps1 -Environment local",
+    "env:production:win": "powershell -ExecutionPolicy Bypass -File scripts/setup-env.ps1 -Environment production",
+    "env:static:win": "powershell -ExecutionPolicy Bypass -File scripts/setup-env.ps1 -Environment static",
+    "deploy": "node scripts/deploy.js",
+    "deploy:windows": "powershell -ExecutionPolicy Bypass -File scripts/deploy.ps1",
+    "deploy:prod": "cross-env NODE_ENV=production node scripts/deploy.js",
+    "deploy:static": "node scripts/deploy-static.js",
+    "deploy:static:win": "powershell -ExecutionPolicy Bypass -File scripts/deploy-static.ps1",
+    "generate:jwt": "node scripts/generate-jwt-secret.js",
+    "generate:jwt:win": "powershell -ExecutionPolicy Bypass -File scripts/generate-jwt-secret.ps1",
+    "predeploy": "npm run db:push",
+    "prebuild": "npm run check"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
@@ -46,8 +64,10 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/pg": "^8.16.0",
     "axios": "^1.12.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -63,6 +83,7 @@
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "openai": "^6.15.0",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "react": "^19.2.1",
@@ -92,6 +113,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "pnpm": "^10.15.1",
