--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "deploy:static:win": "powershell -ExecutionPolicy Bypass -File scripts/deploy-static.ps1",
     "generate:jwt": "node scripts/generate-jwt-secret.js",
     "generate:jwt:win": "powershell -ExecutionPolicy Bypass -File scripts/generate-jwt-secret.ps1",
-    "predeploy": "npm run db:push",
-    "prebuild": "npm run check"
+    "predeploy": "npm run db:push"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
