--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --external:vite --external:@tailwindcss/vite --external:@vitejs/plugin-react --external:vite-plugin-manus-runtime",
     "build:frontend": "vite build",
-    "build:backend": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:backend": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --external:vite --external:@tailwindcss/vite --external:@vitejs/plugin-react --external:vite-plugin-manus-runtime",
     "start": "node dist/index.js",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
