feat: Sistema completo de assinaturas e Portal do Cliente Stripe
- Implementado sistema completo de assinaturas com Stripe
- Adicionado Portal do Cliente para gerenciamento de assinaturas
- Criadas pÃ¡ginas de Pricing, Token Usage e Account Subscription
- Implementado sistema de sincronizaÃ§Ã£o de tokens entre tokenUsage e subscriptions
- Adicionados webhooks completos do Stripe (checkout, subscriptions, payments, portal)
- Criado sistema de fallback client-side para sincronizaÃ§Ã£o de checkout
- Implementadas badges e highlights para plano atual e upgrades recomendados
- Adicionada funcionalidade de mudanÃ§a de ciclo de pagamento (mensal/anual)
- Criados scripts de configuraÃ§Ã£o: seed-plans, debug-subscription, configure-portal
- DocumentaÃ§Ã£o completa: Portal do Cliente, Guia de Testes, Webhooks
- Corrigido redirecionamento pÃ³s-pagamento dentro do DashboardLayout
- Movidos arquivos de documentaÃ§Ã£o para pasta docs/
- Atualizado branding de Bardo AI para StoryTeller

--- a/config.dev.template
+++ b/config.dev.template
@@ -6,7 +6,7 @@
 NODE_ENV=development
 
 # Banco de Dados Local (Docker)
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/bardo
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/stroryTeller
 
 # JWT Secret (pode ser simples em dev)
 JWT_SECRET=dev-secret-key-change-in-production
@@ -30,4 +30,13 @@ OPENAI_API_KEY=your-dev-openai-key-here
 # Debug/Logs
 DEBUG=true
 LOG_LEVEL=debug
+
+
+
+
+
+
+
+
+
 
