--- a/env.local.example
+++ b/env.local.example
@@ -5,7 +5,7 @@
 # Para usar: npm run env:local
 
 # Database - PostgreSQL Local via Docker
-DATABASE_URL=postgresql://bardoai:bardoai123@localhost:5432/bardoai
+DATABASE_URL=postgresql://postgres:storyteller_dev_password@localhost:5432/storyteller
 
 # JWT Secret - Use qualquer string longa e aleatória
 JWT_SECRET=local-dev-secret-key-change-in-production-32-chars-minimum
@@ -20,6 +20,17 @@ NODE_ENV=development
 
 # Porta do servidor
 PORT=3000
+
+# Stripe (Modo de Teste)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# URL da aplicação (para redirects do Stripe)
+APP_URL=http://localhost:5173
+
+
+
 
 
 
