--- a/env.production.example
+++ b/env.production.example
@@ -16,7 +16,7 @@ DATABASE_URL=postgresql://postgres:your-super-secret-and-long-postgres-password@
 JWT_SECRET=your-super-secret-jwt-token-with-at-least-32-characters-long
 
 # OAuth (opcional - apenas se usar OAuth futuramente)
-VITE_APP_ID=bardoai-production
+VITE_APP_ID=stroryTeller-production
 OAUTH_SERVER_URL=https://seu-dominio.com
 OWNER_OPEN_ID=your-owner-id
 
@@ -25,6 +25,14 @@ NODE_ENV=production
 
 # Porta do servidor
 PORT=3000
+
+# Stripe (Modo de Produção)
+STRIPE_SECRET_KEY=sk_live_your_stripe_live_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_live_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_production_webhook_secret_here
+
+# URL da aplicação (para redirects do Stripe)
+APP_URL=https://seu-dominio.com
 
 # ================================
 # INSTRUÇÕES:
@@ -40,6 +48,15 @@ PORT=3000
 # 3. Execute o deploy:
 #    npm run deploy:prod
 # ================================
+
+
+
+
+
+
+
+
+
 
 
 
