--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: bardo_postgres
+    container_name: storyteller_postgres
     restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: bardo_dev_password
-      POSTGRES_DB: bardo
+      POSTGRES_PASSWORD: storyteller_dev_password
+      POSTGRES_DB: storyteller
     ports:
       - "5432:5432"
     volumes:
@@ -22,6 +22,15 @@ services:
 volumes:
   postgres_data:
     driver: local
+
+
+
+
+
+
+
+
+
 
 
 
