--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bardo",
+  "name": "stroryTeller",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx watch server/_core/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch --env-file=.env.local server/_core/index.ts",
     "build": "vite build",
     "build:frontend": "vite build",
     "start": "NODE_ENV=production tsx server/_core/index.ts",
@@ -14,6 +14,11 @@
     "test": "vitest run",
     "db:push": "drizzle-kit push",
     "db:migrate": "npm run db:push",
+    "db:seed:plans": "node scripts/seed-plans.js",
+    "db:debug": "node scripts/debug-subscription.js",
+    "db:create-test-sub": "node scripts/create-test-subscription.js",
+    "stripe:check": "node scripts/check-webhook-config.js",
+    "stripe:configure-portal": "node scripts/configure-customer-portal.js",
     "env:setup": "node scripts/setup-env-config.js",
     "env:setup:win": "powershell -ExecutionPolicy Bypass -File scripts/setup-env-config.ps1",
     "env:local": "node scripts/setup-env.js local",
@@ -95,6 +100,7 @@
     "recharts": "^2.15.2",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
+    "stripe": "^20.1.0",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
