feat: Adiciona ferramenta de diagnÃ³stico de planos em produÃ§Ã£o
- Criado script debug-prod-plans.js para verificar planos cadastrados
- Adiciona verificaÃ§Ã£o de IDs de teste vs produÃ§Ã£o
- Criado guia RESOLVER_PRECOS_PROD.md com troubleshooting completo
- Novo comando: npm run db:debug:plans

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:migrate": "npm run db:push",
     "db:seed:plans": "node scripts/seed-plans.js",
     "db:debug": "node scripts/debug-subscription.js",
+    "db:debug:plans": "node scripts/debug-prod-plans.js",
     "db:create-test-sub": "node scripts/create-test-subscription.js",
     "stripe:check": "node scripts/check-webhook-config.js",
     "stripe:configure-portal": "node scripts/configure-customer-portal.js",
